# opensurfcl

./: CMakeLists.txt  readme.txt
CsOpenSurfCLWrap/: CsOpenSurfCL.sln  readme.txt
CsOpenSurfCLWrap/CamSurfForge/: CamSurfForge.csproj  Program.cs  VideoForm.Designer.cs  VideoForm.cs
CsOpenSurfCLWrap/CamSurfForge/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
CsOpenSurfCLWrap/CsOpenSurfCLConsole/: CsOpenSurfCLConsole.csproj  Program.cs
CsOpenSurfCLWrap/CsOpenSurfCLConsole/Properties/: AssemblyInfo.cs
CsOpenSurfCLWrap/CsOpenSurfCLWrap/: CsOpenSurfCLWrap.csproj
CsOpenSurfCLWrap/CsOpenSurfCLWrap/Properties/: AssemblyInfo.cs
CsOpenSurfCLWrap/OpenSURFDemo/: DemoSURF.Designer.cs  DemoSURF.cs  OpenSURFDemo.csproj  Program.cs
CsOpenSurfCLWrap/OpenSURFDemo/Properties/: Resources.Designer.cs
JOpenSurfCLWrap/: build.xml
JOpenSurfCLWrap/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
JOpenSurfCLWrap/src/: Main.java
benchmark/: CMakeLists.txt  main.cpp  microtime.h
csharpwrap/: CMakeLists.txt  CsOpenSurfCL.i
data/: Hessian.cl  IntegralImage.cl  SurfDescriptor.cl  test.cl
demo/: CMakeLists.txt  main.cpp
javawrap/: CMakeLists.txt  JOpenSurfCL.i
opensurfcl/: CCLDevice.cpp  CCLDevice.h  CMakeLists.txt  CSurfCL.cpp  CSurfCL.h  SIPoint.h
opensurfcl/old/: CHessian.cpp  CHessian.h  CHessianCL.cpp  CHessianCL.h  CIntegralImage.cpp  CIntegralImage.h  CIntegralImageCL.cpp  CIntegralImageCL.h  CMakeLists.txt  CMatrix.cpp  CMatrix.h  CResponseLayer.cpp  CResponseLayer.h  IPoint.cpp  IPoint.h
test/: CMakeLists.txt  CSurfCLTestSuite.h
